# OOP_lab2

./: README.md
tasks/lab2/: CMakeLists.txt  README.md  main.cpp
tasks/lab2/include/: array.h  twelve.h
tasks/lab2/src/: array.cpp  twelve.cpp
tasks/lab2/tests/: test_twelve.cpp
tasks/lab3/: CMakeLists.txt  main.cpp
tasks/lab3/include/: Array.h  Figure.h  Point.h  Rectangle.h  Square.h  Trapezoid.h
tasks/lab3/src/: Array.cpp  Figure.cpp  Rectangle.cpp  Square.cpp  Trapezoid.cpp
tasks/lab3/tests/: test_geometry.cpp
